[package]
name = "timer-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.7", optional = true }
web-time = "1.1.0"

[dependencies.web-sys]
version = "0.3.4"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
